--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="stylesheet" href="./dist/style.css">
     <title>Rock Paper Scissors</title>
   </head>
   <body>
